--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "nodemailer-express-handlebars": "^7.0.0",
     "nodemon": "^3.1.9",
     "zod": "^3.24.1"
   },
